# intuitive-agent

./: README.md
incident-triage-agent/: Makefile  README.md  docker-compose.yml
incident-triage-agent/AI conversation/: a087548c-ab17-4f68-96cf-e69c52763ea1.jsonl
incident-triage-agent/backend/: .env.example  Makefile  pyproject.toml  triage.db  triage.db-shm  triage.db-wal
incident-triage-agent/backend/src/triage_agent/: config.py  main.py
incident-triage-agent/backend/src/triage_agent/agent/: checkpointer.py  constants.py  graph.py  nodes.py  state.py  tools.py
incident-triage-agent/backend/src/triage_agent/api/: router.py  websocket.py
incident-triage-agent/backend/src/triage_agent/mocks/: kubectl_executor.py  log_fetcher.py  metrics_service.py  ollama_mock.py  sample_alerts.py
incident-triage-agent/backend/src/triage_agent/models/: events.py  incident.py
incident-triage-agent/backend/src/triage_agent/services/: incident_store.py  runner.py
incident-triage-agent/frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
incident-triage-agent/frontend/src/: App.tsx
incident-triage-agent/frontend/src/api/: incidents.ts
incident-triage-agent/frontend/src/components/ApprovalPanel/: ApprovalActions.tsx  ApprovalPanel.tsx  RemediationSummary.tsx
incident-triage-agent/frontend/src/hooks/: useIncidentList.ts  useIncidentWebSocket.ts
incident-triage-agent/frontend/src/store/: incidentStore.ts
incident-triage-agent/frontend/src/types/: events.ts  incident.ts
(+10 files in other folders)
